# dirschema

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANUAL.md  README.md  codemeta.json  dirschema.html  index.html  mkdocs.yml  pyproject.toml  search.js
.github/workflows/: ci.yml  publish.yml
.reuse/: dep5
dirschema/: __init__.py  adapters.html  adapters.py  cli.html  cli.py  core.html  core.py  handler.html  handler.py  handler_pydantic.py  json.html  log.html  parse.py  validate.html  validate.py  validator.py
dirschema/json/: handler.html  handler.py  handler_pydantic.html  handler_pydantic.py  handlers.html  handlers.py  parse.html  parse.py  validate.html  validate.py
docs/: manual.md  quickstart.md
latest/coverage/: d_2e598cfbdc61bb51___init___py.html  d_2e598cfbdc61bb51_handler_py.html  d_2e598cfbdc61bb51_handler_pydantic_py.html  d_2e598cfbdc61bb51_handlers_py.html  d_2e598cfbdc61bb51_parse_py.html  d_2e598cfbdc61bb51_validate_py.html  d_2feea75b1307b325___init___py.html  d_2feea75b1307b325_adapters_py.html  d_2feea75b1307b325_cli_py.html  d_2feea75b1307b325_core_py.html  d_2feea75b1307b325_log_py.html  d_2feea75b1307b325_validate_py.html
main/: 404.html  index.html  objects.inv  sitemap.xml
main/changelog/: index.html
main/code_of_conduct/: index.html
main/contributing/: index.html
main/coverage/: covindex.html  d_2e598cfbdc61bb51___init___py.html  d_2e598cfbdc61bb51_handler_py.html  d_2e598cfbdc61bb51_handler_pydantic_py.html  d_2e598cfbdc61bb51_handlers_py.html  d_2e598cfbdc61bb51_parse_py.html  d_2e598cfbdc61bb51_validate_py.html  d_2feea75b1307b325___init___py.html  d_2feea75b1307b325_adapters_py.html  d_2feea75b1307b325_cli_py.html  d_2feea75b1307b325_core_py.html  d_2feea75b1307b325_log_py.html  d_2feea75b1307b325_validate_py.html  index.html  status.json
main/credits/: index.html
main/dev_guide/: index.html
main/license/: index.html
main/manual/: index.html
main/quickstart/: index.html
main/scripts/: coverage_status.py
main/search/: search_index.json
schemas/: mutex.dirschema.yaml  mutex_no_if.dirschema.yaml  recursive.yaml  simple.dirschema.yaml  test_next.dirschema.yaml  test_then.dirschema.yaml  text.schema.json  text.schema.yaml  toy_dataset.dirschema.yaml
src/dirschema/: adapters.py  cli.py  core.py  log.py  validate.py
tests/: __init__.py  conftest.py  test_adapters.py  test_core.py  test_json_parse.py  test_json_validators.py  test_parse.py  test_validate.py  test_validator.py
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.0/changelog/: index.html
v0.1.0/code_of_conduct/: index.html
v0.1.0/contributing/: index.html
v0.1.0/coverage/: covindex.html  d_2e598cfbdc61bb51___init___py.html  d_2e598cfbdc61bb51_handler_py.html  d_2e598cfbdc61bb51_handler_pydantic_py.html  d_2e598cfbdc61bb51_handlers_py.html  d_2e598cfbdc61bb51_parse_py.html  d_2e598cfbdc61bb51_validate_py.html  d_2feea75b1307b325___init___py.html  d_2feea75b1307b325_adapters_py.html  d_2feea75b1307b325_cli_py.html  d_2feea75b1307b325_core_py.html  d_2feea75b1307b325_log_py.html  d_2feea75b1307b325_validate_py.html  index.html  status.json
v0.1.0/credits/: index.html
v0.1.0/css/: style.css
v0.1.0/dev_guide/: index.html
v0.1.0/license/: index.html
v0.1.0/manual/: index.html
v0.1.0/quickstart/: index.html
(+45 files in other folders)
