[tool.poetry]
name = "dirschema"
version = "0.1.0"
description = "Directory structure and metadata linter based on JSON Schema"
authors = ["a.pirogov <a.pirogov@fz-juelich.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7,<3.11"
typer = "^0.4.0"
pydantic = "^1.8.2"
h5py = { version = "^3.4.0", optional = true }
"ruamel.yaml" = "^0.17.16"
jsonref = "^0.2"
jsonschema = "^3.2.0"
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]
pdoc = "^7.1.1"
pre-commit = "^2.13.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
h5py = "^3.4.0"

numpy = "^1.21.2"
# tox = "^3.23.1"

[tool.poetry.scripts]
dirschema = 'dirschema.cli:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# pytest.ini replacement (pytest >= 6.0)
[tool.pytest.ini_options]
addopts = "--cov-report=term-missing:skip-covered"
filterwarnings = ["ignore::DeprecationWarning:somepackage.*"]

# .coveragerc replacement
[tool.coverage.run]
source = ['dirschema']

# [tool.tox]
# legacy_tox_ini = """
# [tox]
# isolated_build = true
# envlist = py37, py38, py39

# [testenv]
# whitelist_externals = poetry
# commands =
#     poetry install -v
#     poetry run pytest
# """
