[tool.poetry]
name = "dirschema"
version = "0.1.0"
description = "Directory structure and metadata linter based on JSON Schema"
authors = ["a.pirogov <a.pirogov@fz-juelich.de>"]
license = "MIT"

# added for PyPI
readme = "README.md"
repository = "https://github.com/Materials-Data-Science-and-Informatics/dirschema"
homepage = "https://github.com/Materials-Data-Science-and-Informatics/dirschema"
documentation = "https://materials-data-science-and-informatics.github.io/dirschema/"
keywords = ["jsonschema", "validation", "directory", "structure"]
classifiers = [ # see https://pypi.org/classifiers/
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
include = [
    "LICENSE",
]
####

[tool.poetry.dependencies]
python = "^3.8,<3.11"
pydantic = "^1.8.2"
"ruamel.yaml" = "^0.17.16"
jsonref = "^0.2"
typing-extensions = "^3.10.0"
h5py = { version = "^3.4.0", optional = true }
numpy = { version = "^1.21.2", optional = true }
jsonschema = "^4.4.0"
typer = "^0.4.0"
entrypoints = "^0.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
pytest = "^6.2.4"
pdoc = "^8.0.1"
pytest-cov = "^3.0.0"

[tool.poetry.extras]
h5 = ["h5py", "numpy"]

[tool.poetry.scripts]
dirschema = 'dirschema.cli:app'

[tool.poetry.plugins.dirschema_validator]
# dirschema supports entry-point-based validation plugins.
# The default pydantic handler can be subclassed or
# can serve as a template for your custom validation plugins.
pydantic = "dirschema.json.handler_pydantic:PydanticHandler"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# pytest.ini replacement (pytest >= 6.0)
[tool.pytest.ini_options]
addopts = "--cov-report=term-missing:skip-covered"
filterwarnings = ["ignore::DeprecationWarning:somepackage.*"]

# .coveragerc replacement
[tool.coverage.run]
source = ['dirschema']
